<resources>
    <string name="app_name">Nitt Mess</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_feed_back">FeedBack</string>
    <string name="menu_mess_menu">Mess Menu</string>
    <string name="menu_leave_request">Leave Request</string>
    <string name="menu_leave_request_history">Leave Request History</string>
    <string name="menu_guest">Generate Guest QR</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>

    <string name="todo">Todo</string>

    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="web_mail_id">Web Mail Id</string>
    <string name="send_verification_link">Send Verification Link</string>
    <string name="send_password_link">Send Password Link</string>
    <string name="enter_web_mail_id">Enter Web Mail Id</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="resend_verification_link">Resend Verification Link</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_Logout">Logout</string>
    <string name="action_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_link">Send Link</string>
</resources>